--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+
+    <!-- HTML Meta Tags -->
+    <title>IKEA Furniture or Swedish Word?</title>
+    <meta name="description" content="Think you can tell the difference between IKEA furniture and real Swedish words? Can you get a perfect score?">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://ikea.squircle.computer">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="IKEA Furniture or Swedish Word?">
+    <meta property="og:description" content="Think you can tell the difference between IKEA furniture and real Swedish words? Can you get a perfect score?">
+    <meta property="og:image" content="https://ikea.squircle.computer/images/ogimage.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="ikea.squircle.computer">
+    <meta property="twitter:url" content="https://ikea.squircle.computer">
+    <meta name="twitter:title" content="IKEA Furniture or Swedish Word">
+    <meta name="twitter:description" content="Think you can tell the difference between IKEA furniture and real Swedish words? Can you get a perfect score?">
+    <meta name="twitter:image" content="https://ikea.squircle.computer/images/ogimage.png">
 </head>
 <body>
 
