--- a/index.html
+++ b/index.html
@@ -40,8 +40,18 @@
 
 
         <div id="start-screen" class="screen active">
-            <div style="color: #FBD913;"><p>Can you tell the difference between an IKEA furniture name and a random real Swedish word?</p></div>
-            <button id="start-button">Start the game</button>
+                <div class="start-description">
+                <p>
+                    Can you tell the difference between an IKEA furniture name and a real Swedish word?
+                    You'll face <strong>10 questions</strong> and have just <strong>15 seconds</strong> for each. Choose wisely!
+                </p>
+
+            </div>
+
+            <button id="start-button" style="margin-bottom: 10px;">Start the game</button>
+        <p class="disclaimer">
+                    (Yeah, I know a lot of IKEA names are actually real Swedish words. That's part of the fun!)
+                </p>
         </div>
 
 
