another big update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://ikea.squircle.computer">
     <meta property="og:type" content="website">
     <meta property="og:title" content="IKEA Furniture or Swedish Word?">
-    <meta property="og:description" content="Think you can tell the difference between IKEA furniture and real Swedish words? Can you get a perfect score?">
+    <meta property="og:description" content="Think you can tell the difference between IKEA furniture and real Swedish words? Can you get a perfect score? ">
     <meta property="og:image" content="https://ikea.squircle.computer/images/ogimage.png">
 
     <!-- Twitter Meta Tags -->
@@ -76,8 +76,12 @@
             <div class="share-card-content">
                 <h2>IKEA or Swedish?</h2>
                 <p class="share-card-description">
-                    qgmdljf kzemoasmfoqepo fufqsodffpouq efjdsmlfjks mdlkgjslvnq smdkjfm zejfmosdi foeiuz qproeiua zrpodf
+                      I tried to guess if a word is an IKEA furniture or a real Swedish word. Here are my results!
                 </p>
+                <div class="performance-score-container">
+                    <div class="performance-score-label">Final Score</div>
+                    <div class="performance-score-value" id="share-performance-score"></div>
+                </div>
                 <div class="share-card-stats">
                     <div class="stat">
                         <div class="stat-value" id="share-score"></div>
@@ -101,6 +105,10 @@
         <div id="results-screen" class="screen">
            <div style="margin-top: -25px;"><h2>Thx you for playing!</h2></div>
             <div style="color: #FBD913; margin-top: -30px;"><p>Play again or share your results with a beautiful card!</p></div>
+                <div class="performance-score-container">
+        <div class="performance-score-label">Final Score</div>
+        <div class="performance-score-value" id="performance-score"></div>
+    </div>
             <div class="results-stats-container">
                 <div class="stat">
                     <div class="stat-value" id="final-score"></div>
